--- a/README
+++ b/README
@@ -8,8 +8,8 @@ number of substitutes is controlled by two parameters: -n specifies
 the number of substitutes for each word, -p specifies a threshold on
 the sum of the substitute probabilities.  The program stops generating
 substitutes for a word when either limit is satisfied.  The output has
-an input word and its substitutes with unnormalized log probabilities
-in the following format:
+an input word and its substitutes with the logarithm (base 10) of
+their unnormalized probabilities in the following format:
 
 word <tab> sub1 <space> lprob1 <tab> sub2 <space> lprob2 <tab> ...
 
