--- a/README
+++ b/README
@@ -42,3 +42,8 @@ Makefile:
 * lm-test: Takes a model file and tests the lm data structure by
   reading n-grams from the user and printing out their logp and
   back-off weights.
+
+* normalize-subs.pl: Takes fastsubs output and converts the
+  unnormalized log10(p) entries to normalized p entries that add up to
+  1.0 (which may not be accurate if fastsubs did not output the whole
+  vocabulary.)
